# qa-report-manual

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/qa_report_manual/: __init__.py  capture.py  cli.py  docx_writer.py  generators.py  models.py  web.py  xlsx_writer.py
