[project]
name = "qa-report-manual"
version = "0.1.0"
description = "Generate a QA report draft and end-user manual from a website URL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.49.0",
  "python-docx>=1.1.0",
  "flask>=3.0.0",
  "pillow>=10.0.0",
  "openpyxl>=3.1.0",
]

[project.scripts]
qa-report-manual = "qa_report_manual.cli:main"
qa-report-web = "qa_report_manual.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_report_manual"]
